# neuromf

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: external-code-reviewer.md  paper-figure-generator.md  phase-implementer.md  test-runner.md
.claude/commands/: check-gate.md  implement-phase.md  review-external.md  run-tests.md
.claude/hooks/: compact-context.sh
.claude/rules/: coding-standards.md
.claude/skills/dl-scientist/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/phase4-results-diagnoser/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/test/: SKILL.md
configs/: base.yaml  encode_dataset.yaml  fomo60k.yaml  toy_toroid.yaml  train_meanflow.yaml  vae_validation.yaml
configs/picasso/: base.yaml  encode_dataset.yaml  fomo60k.yaml  train_meanflow.yaml  vae_validation.yaml
docs/data/: checkpoint_exploration.md  fomo60k_dataset_preparation_prompt.md  fomo60k_exploration.md  ixi_exploration.md  resolution_analysis.md
docs/main/: methodology_expanded.md  technical_guide.md
docs/misc/: agent_setup_prompt.md  deep_research_claude_21022026.md  neuromf_setup_review_and_next_prompt.md  phase4c_review.md  phase_2_experiment_prompt.md  review_run_v1.md  run_configs.md
docs/papers/: README.md
docs/papers/flow_matching_2023/: README.md
docs/papers/imf_2025/: README.md  code_exploration.md
docs/papers/lora_2022/: README.md
docs/papers/maisi_2024/: README.md
docs/papers/maisi_v2_2025/: README.md  code_exploration.md
docs/papers/meanflow_2025/: README.md  code_exploration.md  pytorch_code_exploration.md
docs/papers/motfm_2025/: README.md  code_exploration.md
docs/papers/pmf_2026/: README.md  code_exploration.md
docs/papers/slim_diff_2026/: README.md
docs/splits/: phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_4b_diagnostics_prompt.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md
experiments/ablations/lp_sweep/: README.md
experiments/ablations/nfe_steps/: README.md
experiments/ablations/phase_4/: ablations.yaml  launch_all.sh  launch_one.sh
experiments/ablations/phase_4/configs/: v2_baseline.yaml  v3_aug.yaml  v4_mask.yaml  v5_aug_mask.yaml
experiments/ablations/xpred_vs_upred/: README.md  ablations.yaml  compare_arms.py  launch.sh
experiments/ablations/xpred_vs_upred/configs/: upred_fd_jvp.yaml  xpred_exact_jvp.yaml
experiments/cli/: decode_samples.py  encode_dataset.py  plot_training_dashboard.py  run_toy_toroid.py  train.py  validate_vae.py  verify_phase3.py
experiments/phase_0/: verification_report.md
experiments/phase_3/: verification_report.md
experiments/phase_4/: test_summary_unet_wrapper.md  verification_report.md  verification_report_final.md  verification_report_unet_wrapper.md
experiments/slurm/phase_0/: validate_vae.sh  validate_vae_worker.sh
experiments/slurm/phase_1/: encode_dataset.sh  encode_worker.sh  example_1.sh  example_2.sh  example_3.sh
experiments/slurm/phase_2/: toroid_sweep.sh  toroid_sweep_worker.sh
experiments/slurm/phase_4/: augmentation_viz.sh  augmentation_viz_worker.sh  train.sh  train_worker.sh
experiments/slurm/skull_strip/: skull_strip.sh  skull_strip_visualize.sh  skull_strip_worker.sh
experiments/stage1_healthy/: README.md
experiments/stage2_fcd/: README.md
experiments/toy_toroid/: README.md  evaluate.py  figures.py  report.py  sweep.py  train.py
experiments/toy_toroid/configs/: ablation_a.yaml  ablation_b.yaml  ablation_c.yaml  ablation_d.yaml  ablation_e.yaml  base.yaml
experiments/utils/: settings.py
experiments/vae_validation/: README.md
scripts/: activate.sh  analyze_multi_timepoint.py  check_env.py  convert_pt_to_hdf5.py  download_fid_weights.py  explore_fomo60k_filters.py  skull_strip_defaced.py  verify_paths.py  visualize_augmentations.py
scripts/augmentation_viz/: common.py  run_all.py
src/neuromf/: __init__.py
src/neuromf/callbacks/: __init__.py  diagnostics.py  evaluation.py  performance.py  sample_collector.py
src/neuromf/data/: __init__.py  fomo60k.py  latent_augmentation.py  latent_dataset.py  latent_hdf5.py  mri_preprocessing.py  toroid_dataset.py
src/neuromf/errors/: __init__.py
src/neuromf/losses/: __init__.py  combined_loss.py  lp_loss.py  meanflow_jvp.py
src/neuromf/metrics/: __init__.py  coverage_density.py  fid.py  mmd.py  ssim_psnr.py  swd.py
src/neuromf/models/: __init__.py  latent_meanflow.py  toy_mlp.py
src/neuromf/sampling/: __init__.py  multi_step.py  one_step.py
src/neuromf/utils/: __init__.py  ema.py  latent_diagnostics.py  latent_stats.py  sample_plots.py  time_sampler.py  training_dashboard.py  visualisation.py
src/neuromf/wrappers/: __init__.py  jvp_strategies.py  maisi_unet.py  maisi_vae.py  meanflow_loss.py
tests/: conftest.py  test_coverage_density.py  test_diagnostics.py  test_ema.py  test_evaluation.py  test_jvp_compatibility.py  test_latent_augmentation.py  test_latent_dataset.py  test_latent_hdf5.py  test_latent_meanflow.py  test_lp_loss.py  test_lp_loss_perchannel.py  test_maisi_unet_wrapper.py  test_maisi_vae_wrapper.py  test_meanflow_loss.py  test_meanflow_pipeline.py  test_mmd.py  test_real_data_augmentation.py  test_real_latents.py  test_sample_collector.py  test_sample_plots.py  test_spatial_masking.py  test_time_sampler.py  test_toroid_dataset.py
