[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromf"
version = "0.1.0"
description = "Neuro MeanFlow: Leveraging Mean Flow Matching in Latent Space for 3D T1-weighted MRI Generation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = [
    "deep-learning",
    "generative-models",
    "flow-matching",
    "medical-imaging",
    "mri",
    "3d-generation",
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Core dependencies for training and inference.
# NOTE: Install PyTorch via conda first for CUDA support:
#   conda install pytorch torchvision torchaudio pytorch-cuda=12.1 -c pytorch -c nvidia
dependencies = [
    # Deep learning framework
    "torch>=2.2",
    "torchvision>=0.17",
    # Training framework
    "pytorch-lightning>=2.2",
    "torchmetrics>=1.3",
    # Medical imaging toolkit
    "monai>=1.3",
    # Configuration management
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Tensor rearrangement (required: all reshapes use einops per coding standards)
    "einops>=0.7",
    # Perceptual loss (slice-wise LPIPS for 3D)
    "lpips>=0.1",
    # Scientific computing
    "scipy>=1.12",
    "numpy>=1.26",
    # Logging
    "rich>=13.0",
    # Visualizations
    "matplotlib>=3.7",
    "seaborn>=0.13",
    # Data handling
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Medical data preprocessing (NIfTI I/O, registration, morphological features)
medical = [
    "nibabel>=5.0",
    "antspyx>=0.4",
    "scikit-image>=0.22",
]
# Evaluation metrics (FID/KID computation)
eval = [
    "torch-fidelity>=0.3",
]
# LoRA fine-tuning (epilepsy/FCD stage)
finetune = [
    "peft>=0.10",
]
# Flow matching baseline comparison (torchcfm as reference)
baseline = [
    "torchcfm>=1.0",
]
# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
# Install everything
all = [
    "neuromf[medical,eval,finetune,baseline,dev]",
]

[project.urls]
Homepage = "https://github.com/MarioPasc/neuromf"
Documentation = "https://github.com/MarioPasc/neuromf#readme"
Repository = "https://github.com/MarioPasc/neuromf"
"Bug Tracker" = "https://github.com/MarioPasc/neuromf/issues"
Changelog = "https://github.com/MarioPasc/neuromf/releases"

# ---------------------------------------------------------------------------
# Package discovery (src-layout)
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["neuromf*", "external*"]

[tool.setuptools.package-data]
neuromf = ["py.typed"]

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "phase0: Phase 0 tests (VAE validation)",
    "phase1: Phase 1 tests (latent pre-computation)",
    "phase2: Phase 2 tests (toroid toy experiment)",
    "phase3: Phase 3 tests (MeanFlow loss + UNet)",
    "phase4: Phase 4 tests (training)",
    "phase5: Phase 5 tests (evaluation)",
    "phase6: Phase 6 tests (ablations)",
    "phase7: Phase 7 tests (LoRA FCD)",
    "critical: Must pass for phase gate",
    "informational: Nice to have, not gating",
]

[tool.coverage.run]
source = ["neuromf"]
omit = ["src/external/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "monai.*",
    "lpips.*",
    "antspyx.*",
    "nibabel.*",
    "torchcfm.*",
    "peft.*",
    "torch_fidelity.*",
    "einops.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Linting & formatting (ruff replaces flake8 + isort + black)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "experiments"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B905",  # zip() without strict= (not always needed)
]

[tool.ruff.lint.isort]
known-first-party = ["neuromf", "external"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests
"src/external/**" = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]  # skip linting vendored code

[tool.ruff.format]
